force-app/main/default/objects/Krow__Survey_Response__c/Krow__Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Klient Survey Response</label>
    <nameField>
        <displayFormat>SR-{000}</displayFormat>
        <label>Survey Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>