force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>