force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>