force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email_Template__c</fullName>
    <label>Email Template</label>
    <length>26</length>
    <type>Text</type>
</CustomField>