force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Klient_Survey_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Klient_Survey_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Survey Schedule</label>
    <referenceTo>Krow__Klient_Survey_Schedule__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>