force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>