force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Krow__Logo_URL__c</fullName>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>