force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Name__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>