force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Response_URL__c.field-meta.xml
<CustomField>
    <fullName>Krow__Response_URL__c</fullName>
    <label>Response URL</label>
    <type>Url</type>
</CustomField>