force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Scheduled_Klient_Survey__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Klient_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Klient Survey</label>
    <referenceTo>Krow__Scheduled_Klient_Survey__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>