force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__Survey_View_Count__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_View_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Survey View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>