force-app/main/default/objects/Krow__Survey_Response__c/fields/Krow__UID__c.field-meta.xml
<CustomField>
    <fullName>Krow__UID__c</fullName>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>