force-app/main/default/objects/Krow__Survey_Response__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>